[package]
name = "drivebox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ['derive'] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = [
  "uuid",
  "chrono",
  "runtime-tokio",
  "postgres",
  "tls-rustls",
  "migrate",
  "macros",
] }
tokio = { version = "1.39.2", features = ['full'] }
